# cppgllearn

./: .gitignore  .gitmodules  CMakeLists.txt  gitignore
archive/: LearnGLApp.cpp  LearnGLApp.h
assets/: UGLY_PANDA.aseprite  bambou test.aseprite  fence.aseprite  test1.aseprite  test_spr.aseprite
content/shaders/: fix_color.frag  sprite.frag
content/textures/: test.json  test2.json
libs/glad/src/: glad.c
libs/glm/: readme.md
libs/glm/cmake/: glm.pc.in
libs/glm/util/: glm.natvis
libs/stb_image/: stb_image.h
libs/tinygltf-2.2.0/: json.hpp  stb_image.h  tiny_gltf.h
src/: lib_stb.cpp  main.cpp
src/2d/core/: Camera2D.cpp  Camera2D.h  Entity2D.cpp  Entity2D.h  EntityGroup2D.cpp  EntityGroup2D.h  (+12 more)
src/3d/: Camera.cpp  Camera.h  GLTFLoader.cpp  GLTFLoader.h  Model.cpp  Model.h  Node.cpp  Node.h
src/app/: LearnGLApp.cpp  LearnGLApp.h  SimpleColorMaterial.cpp  SimpleColorMaterial.h  SimpleLightMaterial.cpp  SimpleLightMaterial.h  TutoGLApp.cpp  TutoGLApp.h
src/core/: BatchA.h  Camera.cpp  Camera.h
src/geometry/: PrimitiveHelper.cpp  PrimitiveHelper.h
src/gl/: GLAttribute.cpp  GLAttribute.h  GLBatchA.h  GLBuffer.cpp  GLBuffer.h  GLFWAppA.cpp  GLFWAppA.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLHelper.cpp  GLHelper.h  GLMaterialA.cpp  GLMaterialA.h  GLMesh.cpp  GLMesh.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLTransform.cpp  GLTransform.h  GLTransformA.cpp  GLTransformA.h  GLTransformFeedbackShader.cpp  GLTransformFeedbackShader.h  GLVao.cpp  GLVao.h
src/utils/: FBStack.cpp  FBStack.h  Rect.cpp  Rect.h
(+65 files in other folders)
